@@ -1,16 +1,14 @@
 package com.microsoft.azure.kusto.kafka.connect.sink.formatWriter;
 
+import com.microsoft.azure.kusto.kafka.connect.sink.format.RecordWriter;
+import com.microsoft.azure.kusto.kafka.connect.sink.format.RecordWriterProvider;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
-
 import org.apache.kafka.connect.errors.DataException;
 import org.apache.kafka.connect.sink.SinkRecord;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import com.microsoft.azure.kusto.kafka.connect.sink.format.RecordWriter;
-import com.microsoft.azure.kusto.kafka.connect.sink.format.RecordWriterProvider;
 
 public class StringRecordWriterProvider implements RecordWriterProvider {
     private static final Logger log = LoggerFactory.getLogger(StringRecordWriterProvider.class);
@@ -22,7 +20,7 @@ public class StringRecordWriterProvider implements RecordWriterProvider {
             @Override
             public void write(SinkRecord record) throws IOException {
                 byte[] value = null;
-                value = String.format("%s\n", record.value()).getBytes(StandardCharsets.UTF_8);
+                value = "%s\n".formatted(record.value()).getBytes(StandardCharsets.UTF_8);
                 out.write(value);
             }
 
