@@ -1,12 +1,15 @@
 package com.microsoft.azure.kusto.kafka.connect.sink.it.containers;
 
+import static com.microsoft.azure.kusto.kafka.connect.sink.it.ITSetup.KAFKA_CONNECT_PORT;
+import static com.microsoft.azure.kusto.kafka.connect.sink.it.ITSetup.OBJECT_MAPPER;
+
+import com.fasterxml.jackson.core.JsonProcessingException;
 import java.io.IOException;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.HashMap;
 import java.util.Map;
-
 import org.apache.http.HttpResponse;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpGet;
@@ -20,11 +23,6 @@ import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.testcontainers.containers.GenericContainer;
-
-import com.fasterxml.jackson.core.JsonProcessingException;
-
-import static com.microsoft.azure.kusto.kafka.connect.sink.it.ITSetup.KAFKA_CONNECT_PORT;
-import static com.microsoft.azure.kusto.kafka.connect.sink.it.ITSetup.OBJECT_MAPPER;
 
 public class KustoKafkaConnectContainerHelper {
     private static final Logger LOGGER = LoggerFactory.getLogger(KustoKafkaConnectContainerHelper.class);
@@ -55,7 +53,7 @@ public class KustoKafkaConnectContainerHelper {
             connectorConfiguration.put("config", configuration);
             String postConfig = OBJECT_MAPPER.writeValueAsString(connectorConfiguration);
             LOGGER.trace("Registering connector {} with config {}", name, postConfig);
-            executePOSTRequestSuccessfully(postConfig, String.format("%s/connectors", getTarget()));
+            executePOSTRequestSuccessfully(postConfig, "%s/connectors".formatted(getTarget()));
             Awaitility.await()
                     .atMost(KAFKA_CONNECT_START_TIMEOUT)
                     .until(() -> isConnectorConfigured(name));
@@ -67,7 +65,7 @@ public class KustoKafkaConnectContainerHelper {
 
     public boolean isConnectorConfigured(String connectorName) {
         // HTTP get request to check if connector is configured
-        URI connectorUri = URI.create(String.format("%s/connectors/%s/status", getTarget(), connectorName));
+        URI connectorUri = URI.create("%s/connectors/%s/status".formatted(getTarget(), connectorName));
         HttpGet httpget = new HttpGet(connectorUri);
         try (CloseableHttpClient httpclient = HttpClients.createDefault();
              CloseableHttpResponse httpResponse = httpclient.execute(httpget)) {
@@ -98,7 +96,7 @@ public class KustoKafkaConnectContainerHelper {
 
     public String getConnectorTaskState(String connectorName, int taskNumber) {
         // HTTP get request to check if connector is configured
-        URI statusUri = URI.create(String.format("%s/connectors/%s/tasks/%d/status", getTarget(), connectorName, taskNumber));
+        URI statusUri = URI.create("%s/connectors/%s/tasks/%d/status".formatted(getTarget(), connectorName, taskNumber));
         HttpGet httpget = new HttpGet(statusUri);
         try (CloseableHttpClient httpclient = HttpClients.createDefault();
              CloseableHttpResponse httpResponse = httpclient.execute(httpget)) {
